<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:screenOrientation="landscape"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/myLinearLayout"
        style="@style/MyLinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            style="@style/MyTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText2"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username2"
            android:inputType="text"
            android:textColorHint="#636363"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView10"
            style="@style/MyTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColorHint="#636363"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btncolor"
            android:text="@string/loginbtn"
            android:textColor="@color/textcolor"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/loginiccon" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/logintopic"
            android:textAlignment="center"
            android:textColor="@color/topiccolor"
            android:textColorHighlight="#ECD3D3"
            android:textColorLink="#CFCFCF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintopic2"
            android:textAlignment="center"
            android:textColor="@color/topiccolor"
            android:textColorHighlight="#ECD3D3"
            android:textColorLink="#CFCFCF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

