<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="650dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/hometitle2"
            android:textColor="@color/topiccolor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/m1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView55155"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1name"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView66666"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1artist"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView717"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1rate"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/m1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView555515"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music4name"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1artist"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView77"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1rate"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/m2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView555"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1name"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView666"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1artist"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView71717"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1rate"
                    android:textColor="@color/textcolor" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/m2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1rate"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView5555"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music3name"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView6666"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music1artist"
                    android:textColor="@color/textcolor" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hometitle"
            android:textColor="@color/topiccolor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/slideshow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/hometopic"
            android:textColor="@color/topiccolor"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="4"
            app:srcCompat="@drawable/searchbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/propic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/username"
            android:textColor="@color/textcolor" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/bellicon" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/navi" />

</androidx.constraintlayout.widget.ConstraintLayout>